# docs/swagger.json
@@ -137,6 +137,44 @@
                 }
             }
         },
+        "/account/{username}/leaderboard": {
+            "get": {
+                "description": "Get the leaderboard",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    ""
+                ],
+                "summary": "Get the leaderboard",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.ChallengeEntryDTO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/accounts": {
             "post": {
                 "description": "Register an account",
@@ -819,6 +857,23 @@
                 }
             }
         },
+        "main.ChallengeEntryDTO": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "username": {
+                    "type": "string"
+                },
+                "wordCount": {
+                    "type": "integer"
+                }
+            }
+        },
         "main.CreateLobbyRequest": {
             "type": "object",
             "properties": {
@@ -891,12 +946,14 @@
             "enum": [
                 "Vanilla",
                 "Wombo Combo",
-                "Fusion Frenzy"
+                "Fusion Frenzy",
+                "Daily Challenge"
             ],
             "x-enum-varnames": [
                 "VANILLA",
                 "WOMBO_COMBO",
-                "FUSION_FRENZY"
+                "FUSION_FRENZY",
+                "DAILY_CHALLENGE"
             ]
         },
         "main.GenericResponse": {
@@ -961,7 +1018,7 @@
             "type": "object",
             "properties": {
                 "gameMode": {
-                    "type": "string"
+                    "$ref": "#/definitions/main.GameMode"
                 },
                 "gameModes": {
                     "type": "array",
@@ -1095,6 +1152,9 @@
         "main.WordResponse": {
             "type": "object",
             "properties": {
+                "isNew": {
+                    "type": "boolean"
+                },
                 "result": {
                     "type": "string"
                 }
